# OCRRecognization

./: Readme.md  build.gradle  gradle.properties
app/: CMakeLists.txt  Readme.md  build.gradle  readme.txt
app/src/androidTest/java/hanlonglin/com/ocrrecognization/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: mytest.cpp  mytest.h  native-lib.cpp
app/src/main/java/hanlonglin/com/ocrrecognization/: MainActivity.java  StartActivity.java
app/src/main/jni/: Android.mk  Utils.cpp  Utils.h  native-lib.cpp
app/src/main/res/layout/: activity_main.xml  activity_start.xml
app/src/main/res/values/: strings.xml
app/src/test/java/hanlonglin/com/ocrrecognization/: ExampleUnitTest.java
